--- a/.github/workflows/docker-app.yml
+++ b/.github/workflows/docker-app.yml
@@ -37,7 +37,7 @@ jobs:
           DATABASE_USER: social_network
           DATABASE_PASSWORD: postgres
       - name: Run tests
-        run: bundle exec rails test
+        run: bundle exec rspec
         env:
           RAILS_ENV: test
           DATABASE_USER: social_network
