--- a/.github/workflows/docker-app.yml
+++ b/.github/workflows/docker-app.yml
@@ -1,5 +1,9 @@
 name: Docker App
-on: [push]
+on:
+  push:
+    branches: [*]
+  pull_request:
+    branches: [ main ]
 jobs:
   test:
     runs-on: ubuntu-latest
