--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
   database: <%= ENV['DATABASE_NAME'] %>
   username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: localhost
+  host: <%= ENV['DATABASE_HOST'] %>
 
 development:
   <<: *default
