--- a/k8s/two-tier-app-pod.yml
+++ b/k8s/two-tier-app-pod.yml
@@ -6,6 +6,15 @@ spec:
   containers:
   - name: two-tier-app-ctr
     image: harshwebkorps/dockerapp_app:v4
+    env:
+      - name: DATABASE_NAME
+        value: "docker-app"
+      - name: DATABASE_USER
+        value: "social_network"
+      - name: DATABASE_PASSWORD
+        value: "password1"
+      - name: DATABASE_HOST
+        value: "10.106.247.33"
     ports:
       - containerPort: 3000
     imagePullPolicy: Always
